--- a/code/index.html
+++ b/code/index.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <img src="https://publicdomainvectors.org/photos/Teapot.png" alt="">
-    <h1>News Site</h1>
+    <h1>The Leaflet</h1>
     <div class="hamburger">
       <div></div>
       <div></div>
@@ -74,6 +74,13 @@
       <h3>Small news headline</h3>
     </div>
   </section>
+  <footer>
+
+    <a href="#">About</a>
+    <a href="#">Contact</a>
+    <a href="#"></a>
+
+  </footer>
 </body>
 
 </html>
