--- a/code/index.html
+++ b/code/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1 class="title">Lorem Ipsum</h1>
+      <h1 class="title">RivlingNews</h1>
       <!-- Promotional Content (viewed on both sides of logo) -->
       <!-- Shown by default; hidden in mobile -->
       <figure class="promo-1">promo1</figure>
