added a new picture to the big news section

--- a/code/index.html
+++ b/code/index.html
@@ -23,20 +23,23 @@
           <a href="#">Contact Us</a>
       </nav>
   
-  </header>
+    </header>
   
   <section class="big-news-container">
-      <a href="https://news.nike.com/content/nike-sportswear-dunk-spring-2021">
+    <section class="container">
+      <a href="code\images\SP21_Nike_Sportswear_Dunk_Campaign_02_native_1600.png">
           <img src="images\SP21_Nike_Sportswear_Dunk_23_native_1600.jpg" alt="Nike Dunk On Woman">
       </a>
       <div>
-          <h2>Fresh Out the Box</h2>
+          <h1>Fresh Out the Box</h1>
           <p>2021, January 06 - Three versions of the Nike Dunk released. They comoe in the colorways ofblack/white, red/grey and sail/coast. Arriving in spring 2021 to bring a new perspective of the Dunks iconic color-blocking.
           </p>
       </div>
+    </section>
   </section>
   
   <section class="small-news-container"> <!--Contain only cards-->
+    <section class="container">
       <h3>Release Radar</h3>
       <p>
           The hottest release news. </br>
@@ -44,41 +47,40 @@
       </p>
   
       <section class="small-news">
-          <a href=
+        <a href=
               "https://news.nike.com/content/converse-x-concepts-southern-flame-all-star-bb-evo-and-chuck-70">
               <img src="images\Converse_x_CONCEPTS_Chuck_70_2_native_1600.jpg" alt="Converse Chuck 70">
               <h4>Converse x CONCEPTS</h4>
               <p>
               <i>2021, January 14</i> - Converse and CONCEPTS take their collaboration to a whole new level with a "peach basket" theme. The colab honors 130 years of basketball history.
               </p>
-          </a>
-          <a href=
+        </a>
+        <a href=
               "https://news.nike.com/content/nike-x-cpfm-swarovski-dunk-low">
               <img src="images\PLATINUM___MEDIAL_native_1600.jpg" alt="Converse Chuck 70">
               <h4>Shine Some Light on the Nike Dunk</h4>
               <p>
               <i>2020, November 11</i> - With a theme of air and sunshine Cactus Plant Flea Market has done a brilliant collaboration again. The Nike Dunk is shining bright like a diamond with actual Swarovski® crystals.
               </p>
-          </a>
-          <a href=
+        </a>
+        <a href=
               "https://news.nike.com/content/ruohan-wang-flyleather-pack">
               <img src="images\Nike_Sportswear_FA20_Air_Force_1_Flyleather_QS_10_native_1600.jpg" alt="Converse Chuck 70">
               <h4>Mother Nature Taking Over</h4>
               <p>
               <i>2020, September 18</i> - Ruohan Wang (Berlin-Based illustrator) gives the Flyleather pack some optimistic colour and motion. The Flyleather uppers are made with 50% recycled leather fibre, matching the earthy illustration. 
               </p>
-          </a>
-          <a href=
+        </a>
+        <a href=
           "https://news.nike.com/content/nike-sportswear-pack-air-force-1-air-max-98-lx-official-images">
-          <img src="images\Nike_Sportswear_SU20_W_Air_Force_1_LX_10_native_1600.jpg" alt="Converse Chuck 70">
-          <h4>Rip it & Tear it Unique</h4>
-          <p>
-          <i>2020, April 16</i> - Nike Air Force 1 LX releases a unique design for you to be creative in your own way. With an upper layer of white textile, it is what is underneath that is the intriguing part. You can peel back as much as you want from the upper layer to make your own colourway beneath. 
-          </p>
-      </a>
+            <img src="images\Nike_Sportswear_SU20_W_Air_Force_1_LX_10_native_1600.jpg" alt="Converse Chuck 70">
+            <h4>Rip it & Tear it Unique</h4>
+            <p>
+            <i>2020, April 16</i> - Nike Air Force 1 LX releases a unique design for you to be creative in your own way. With an upper layer of white textile, it is what is underneath that is the intriguing part. You can peel back as much as you want from the upper layer to make your own colourway beneath. 
+            </p>
+        </a>
       </section>
-  
-  
+    </section>
   </section>
   
 
