add a header class

--- a/code/index.html
+++ b/code/index.html
@@ -4,16 +4,33 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
+    <header class="header">
+      <div class="introduction">
       <!-- Some kind of logo and navbar -->
+      <!--image class ?-->
+        <img src="./logo.svg" alt="Techigo's logo">
+      </div>
+      <div class="navbar">
+        <nav> <!--här kan man skriva divs istället-->
+          <a href="/html/">Home</a>
+          <a href="/html/">News</a>
+          <a href="/html/">Stories</a>
+          <a href="/html/">Contact</a>
+        </nav>
+      </div>  
     </header>
 
-    <h1>hej</h1>
-
     <section class="big-news">
+      <!--<article>
+        <h1>Hej</h1>-->
+        <p>Här ska du skriva text om något ämne</p>
+        <!--Här kan du också skriva divs-->
+
+      </article>
       <!-- The big news content -->
     </section>
 
