Changed grid layout to be in Mobile first

--- a/code/index.html
+++ b/code/index.html
@@ -16,7 +16,9 @@
       <figure class="promo-2">promo2</figure>
       <nav class="nav-links">links</nav>
       <!-- Shown in mobile -->
-      <button class="btn-side-nav">hamburger</button>
+      <div class="btn-side-nav">
+        <button>hamburger</button>
+      </div>
     </header>
 
     <section id="hero">
