--- a/code/index.html
+++ b/code/index.html
@@ -68,6 +68,9 @@
     </section>
   
     <footer class="footer">
+      <div class="icon">
+        <p class="iheart">&#9829</p>
+      </div>
       <p>Knitty News | &#169 2021</p>
     </footer>
 
