--- a/code/index.html
+++ b/code/index.html
@@ -3,95 +3,96 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Fitness trends for 2021</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css" />
+  <title>Fitness trends for 2021</title>
   <!-- dont forget the meta tag for responsiveness -->
 </head>
 
 <body>
-  <header>
-    <div class="navbar">
-      <a href="#">Home</a>
-      <a href="#">The Big News</a>
-      <a href="#">Other News</a>
-      <a href="#">xxxx</a>
-    </div>
 
-    <img src="logo.svg" alt="Technigo logo">
+  <header class="header">
 
+    <img class="logo" src="./logo.svg" alt="Technigo logo" />
 
-    <h1>Big news today!</h1>
-    <!-- Some kind of logo and navbar -->
+    <h1>Latest news in fitness industry</h1>
+    
+    <nav class="navigation-container">
+      <div class="navigation-item"><a href="#">Home</a></div>
+      <div class="navigation-item"><a href="#">Main News</a></div>
+      <div class="navigation-item"><a href="#">Other News</a></div>
+      <div class="navigation-item"><a href="#">Home</a></div>
+    </nav>
+
   </header>
 
   <section class="big-news">
     <div class="main-news">
-      <img src="steps.jpg" alt="Steps image">
-      <h2>some big news title</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac sed
-        nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
-        finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
-        sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at, pharetra
-        augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi. Fusce euismod viverra lacus, non ultrices
-        enim. Suspendisse feugiat rhoncus velit nec ullamcorper. Donec rutrum eleifend massa in pellentesque. Praesent
-        est ligula, fringilla a diam id, aliquet dapibus nunc. Morbi sapien enim, cursus ut nisi non, ullamcorper
-        lobortis justo. Nullam tempor risus leo, sit amet tristique est pellentesque maximus. Morbi venenatis
-        ullamcorper rhoncus.</p>
+      <img class="main-image" src="./steps.jpg" alt="Steps image" />
+      <article class="article">
+        <h2>some big news title</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
+          sed
+          nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
+          finibus in neque id molestie. Morbi vestibulum orci vel velit congue varius. Aenean convallis molestie orci et
+          sollicitudin. Vestibulum tincidunt hendrerit nisi id commodo. Etiam nec velit rhoncus, mollis nulla at,
+          pharetra
+          augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi. </p>
+      </article>
     </div>
-    <!-- The big news content -->
   </section>
 
   <section class="other-news">
-    <!-- The other news  -->
 
     <div class="news-card">
-      <img src="onlinetraining.jpg" alt="Online training image">
-      <h3>some title</h3>
+      <img src="./onlinetraining.jpg" alt="Online training image" />
+      <h3>Online training</h3>
+      <a href="#">Read more</a>
     </div>
 
     <div class="news-card">
-      <img src="wearable.jpg" alt="">
-      <h3>some title</h3>
+      <img src="./wearable.jpg" alt="" />
+      <h3>Wearable technology</h3>
     </div>
 
     <div class="news-card">
-      <img src="" alt="">
-      <h3>some title</h3>
+      <img src="./pushup.jpg" alt="" />
+      <h3>Body weight training</h3>
     </div>
 
     <div class="news-card">
-      <img src="" alt="">
-      <h3>some title</h3>
+      <img src="./skiing.jpg" alt="" />
+      <h3>Outdoor activities</h3>
     </div>
 
     <div class="news-card">
-      <img src="" alt="">
-      <h3>some title</h3>
+      <img src="./hiit.jpg" alt="" />
+      <h3>High intensity interval training</h3>
     </div>
 
     <div class="news-card">
-      <img src="" alt="">
-      <h3>some title</h3>
+      <img src="./virtual.jpg" alt="" />
+      <h3>Virtual training</h3>
     </div>
 
     <div class="news-card">
-      <img src="" alt="">
-      <h3>some title</h3>
+      <img src="./exercisemedicine.jpg" alt="" />
+      <h3>Exercise is medicine</h3>
     </div>
 
     <div class="news-card">
-      <img src="" alt="">
-      <h3>some title</h3>
+      <img src="./freeweights.jpg" alt="" />
+      <h3>Training with free weights</h3>
     </div>
 
     <div class="news-card">
-      <img src="" alt="">
-      <h3>some title</h3>
+      <img src="./older.jpg" alt="" />
+      <h3>Fitness programs for older adults</h3>
     </div>
 
     <div class="news-card">
-      <img src="" alt="">
-      <h3>some title</h3>
+      <img src="./personaltraining.jpg" alt="" />
+      <h3>Personal training</h3>
     </div>
 
   </section>
