adjust code to mobile first

--- a/code/index.html
+++ b/code/index.html
@@ -9,22 +9,14 @@
 </head>
 
 <body>
-  <header>
+  <header class="header">
     <!-- logo and navbar. Dived logo and links in to different elements to use justify-content:space-between 
       when styling to place the logo to the left and the list to the right-->
-    <img class="logo" src="logo.svg" alt="logo">
-    <nav>
-      <ul class="nav-links">
-        <li>
-          <a href="#">Articles</a>
-        </li>
-        <li>
-          <a href="#">Magazine</a>
-        </li>
-        <li>
-          <a href="#">Contact</a>
-        </li>
-      </ul>
+    <img class="logo" src="./logo.svg" alt="logo">
+    <nav class="navigation-container">
+      <div class="nav-item">Articles</div>
+      <div class="nav-item">Magazine</div>
+      <div class="nav-item">Contact</div>
     </nav>
   </header>
   <main>
