--- a/code/index.html
+++ b/code/index.html
@@ -78,7 +78,7 @@
 
     <a href="#">About</a>
     <a href="#">Contact</a>
-    <a href="#"></a>
+    <a href="#">Terms of service</a>
 
   </footer>
 </body>
