cleaned up header section and added hover effects on navigation links in desktop view

--- a/code/index.html
+++ b/code/index.html
@@ -9,29 +9,30 @@
   </head>
 
   <body>
-    <header>
-      <div class="menu-mobile"> <!--Container for the hamburger meny-->
-          <div></div>
+    
+    <header class="header">
+      <div class="mobile-hamburger">
           <div></div>
           <div></div>
           <div></div>
       </div>
-      <img src="images\sneaker-logo_new.png" alt="Logo">
-      <nav>
-          <a href="#">Sneakers & News</a>
-          <a href="#">Raffle Releases</a>
-          <a href="#">Contact Us</a>
+      <img class="logo" src="images\sneaker-logo_new.png" alt="Header Logo">
+      <h3>Sneakers & News</h3>
+      <nav class="navigation">
+          <a href="#">News</a>
+          <a href="#">Where to buy</a>
+          <a href="#">About</a>
       </nav>
-  
-    </header>
+  </header>
+
   
   <section class="big-news-container">
     <section class="container">
-      <a href="code\images\SP21_Nike_Sportswear_Dunk_Campaign_02_native_1600.png">
+      <a href="https://news.nike.com/content/nike-sportswear-dunk-spring-2021">
           <img src="images\SP21_Nike_Sportswear_Dunk_23_native_1600.jpg" alt="Nike Dunk On Woman">
       </a>
       <div>
-          <h1>Fresh Out the Box</h1>
+          <h2>Fresh Out the Box</h2>
           <p>2021, January 06 - Three versions of the Nike Dunk released. They comoe in the colorways ofblack/white, red/grey and sail/coast. Arriving in spring 2021 to bring a new perspective of the Dunks iconic color-blocking.
           </p>
       </div>
@@ -71,14 +72,14 @@
               <i>2020, September 18</i> - Ruohan Wang (Berlin-Based illustrator) gives the Flyleather pack some optimistic colour and motion. The Flyleather uppers are made with 50% recycled leather fibre, matching the earthy illustration. 
               </p>
         </a>
-        <a href=
+          <a href=
           "https://news.nike.com/content/nike-sportswear-pack-air-force-1-air-max-98-lx-official-images">
             <img src="images\Nike_Sportswear_SU20_W_Air_Force_1_LX_10_native_1600.jpg" alt="Converse Chuck 70">
             <h4>Rip it & Tear it Unique</h4>
             <p>
             <i>2020, April 16</i> - Nike Air Force 1 LX releases a unique design for you to be creative in your own way. With an upper layer of white textile, it is what is underneath that is the intriguing part. You can peel back as much as you want from the upper layer to make your own colourway beneath. 
             </p>
-        </a>
+          </a>
       </section>
     </section>
   </section>
