style tablet device

--- a/code/index.html
+++ b/code/index.html
@@ -10,8 +10,7 @@
 
 <body>
   <header class="header">
-    <!-- logo and navbar. Dived logo and links in to different elements to use justify-content:space-between 
-      when styling to place the logo to the left and the list to the right-->
+    <!-- logo and navbar -->
     <img class="logo" src="./logo.svg" alt="logo">
     <nav class="navigation-container">
       <div class="nav-item">Articles</div>
@@ -19,8 +18,8 @@
       <div class="nav-item">Contact</div>
     </nav>
   </header>
-  <main>
-    <!-- The big news section -->
+  <main class="main-container">
+    <!-- big news section -->
     <section class="big-news-container">
       <div class="big-news-img">
         <img src="img.jpg" alt="image">
@@ -34,10 +33,10 @@
           amet consequat sed vitae a. Tellus amet nulla in id ultricies orci, ultrices
           pellentesque in. Duis porttitor consequat nunc velit, aliquam. Ultricies
           augue fringilla vitae ut aenean.</p>
-        <button>Läs mer</button>
+        <button class="button">Läs mer</button>
       </div>
     </section>
-    <!-- Recent news section -->
+    <!-- recent news section -->
     <section class="recent-news-container">
       <div>
         <div class="recent-news-heading">
