har gjort stora ändrignar i Other news, har gjort samtliga nyheter polaroida

--- a/code/index.html
+++ b/code/index.html
@@ -78,7 +78,7 @@
       
       <!-- The other news  -->
       <div class="flex-child one">
-        <!-- Image --> <img src="https://www.tesla.com/sites/default/files/modelsx-new/social/model-x-social.jpg" alt="Avatar" class="test">
+        <img src="https://www.tesla.com/sites/default/files/modelsx-new/social/model-x-social.jpg" alt="Avatar" class="test">
         <div class="overlay">
           <div class="text">
             <p>
