--- a/code/signup.html
+++ b/code/signup.html
@@ -7,14 +7,15 @@
   <title>Space News Site</title>
   <link rel="stylesheet" href="./style.css" />
 </head>
-<nav>
+
+<nav class="nav">
     <input type="checkbox" id="checkbox" >
     <label for="checkbox"><a class="menu-button"></a>
     </label>
     <div class="menu-content"> 
       <a href="contacts.html" target="blank">contact</a>
       <a href="about.html" target="blank">about</a>
-      <a href="signup.html" target="blank">sign up</a>
+      <a href="index.html" target="blank">home</a>
       <a href="login.html" target="blank">login</a>
     </div>
     <div class="search-content">
@@ -27,17 +28,16 @@
     </div>
   </div>
   </nav>
-<footer>
+
+  <footer class="footer">
     <div class="footer-wrapper">
-      <contaier class="footer-text-container">
-        <p>&copy; Pauline Andersson 2021</p>
-      </contaier>
+      <p>&copy; Pauline Andersson 2021</p>
       <container class="footer-img-container">
         <img src="../pictures/logo.svg">
       </contaier>
-  </div >
+    </div>
   </footer>
-</contaier>
+
 </body>
 
 </html>
