--- a/code/login.html
+++ b/code/login.html
@@ -7,18 +7,19 @@
   <title>Space News Site</title>
   <link rel="stylesheet" href="./style.css" />
 </head>
-<nav>
-    <input type="checkbox" id="checkbox" >
-    <label for="checkbox"><a class="menu-button"></a>
-    </label>
-    <div class="menu-content"> 
-      <a href="contacts.html" target="blank">contact</a>
-      <a href="about.html" target="blank">about</a>
-      <a href="signup.html" target="blank">sign up</a>
-      <a href="login.html" target="blank">login</a>
-    </div>
-    <div class="search-content">
-    <input type="checkbox" id="searchbox" >
+
+<nav class="nav">
+  <input type="checkbox" id="checkbox">
+  <label for="checkbox"><a class="menu-button"></a>
+  </label>
+  <div class="menu-content">
+    <a href="contacts.html" target="blank">contact</a>
+    <a href="about.html" target="blank">about</a>
+    <a href="signup.html" target="blank">sign up</a>
+    <a href="index.html" target="blank">home</a>
+  </div>
+  <div class="search-content">
+    <input type="checkbox" id="searchbox">
     <label for="searchbox">
       <img class="search-button" src="../pictures/magnify.png">
     </label>
@@ -26,18 +27,16 @@
       <input type="text" placeholder="Search..">
     </div>
   </div>
-  </nav>
-<footer>
-    <div class="footer-wrapper">
-      <contaier class="footer-text-container">
-        <p>&copy; Pauline Andersson 2021</p>
-      </contaier>
-      <container class="footer-img-container">
-        <img src="../pictures/logo.svg">
-      </contaier>
-  </div >
-  </footer>
-</contaier>
+</nav>
+
+<footer class="footer">
+  <div class="footer-wrapper">
+    <p>&copy; Pauline Andersson 2021</p>
+    <container class="footer-img-container">
+      <img src="../pictures/logo.svg">
+    </contaier>
+  </div>
+</footer>
 </body>
 
 </html>
