--- a/code/index.html
+++ b/code/index.html
@@ -5,11 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dentnews</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
       <div class="hamburger"> 
         <a href="hamburger.html">
           <div></div>
@@ -19,31 +17,26 @@
       </div>
       <img src="photos/dentnews.png" alt="Dentnews logo">
       <nav>
-        <a href="article1.html">BREAKING NEWS</a> <!--Add anchor to breaking news page-->
-        <a href="about.html">ABOUT</a> <!--Add anchor to about.html-->
-        <a href="contact.html">CONTACT</a> <!--Add anchor to contact page-->
+        <a href="article1.html">BREAKING NEWS</a> 
+        <a href="about.html">ABOUT US</a> 
+        <a href="contact.html">CONTACT</a> 
       </nav>
     </header>
 
     <section class="big-news">
-      <!-- <section class="container"> -->
-      <!-- The big news content -->
-        <a href="article1.html"> <!--Add anchor to article page-->
+        <a href="article1.html"> 
            <img src="photos/dentalvisit.jpg" alt="Picture of a man doing a dental check-up">
           <div>
-            <p><span class="breaking-news">BREAKING NEWS</span></p> <!--Add span to style?-->
+            <p><span class="breaking-news">BREAKING NEWS</span></p> 
             <h1>Dental clinics not affected by the new pandemic law.</h1>
             <p>What you need to know regarding the new law.</p>
           </div>
         </a>
-      <!-- </section> -->
     </section>
 
     <section class="news-container">
-      <!-- <section class="container"> -->
-      <!-- The other news  -->
       <div class="news">
-        <a href="article2.html"> <!--Add anchor to separate article page-->
+        <a href="article2.html"> 
           <img src="photos/implants.jpg" alt="Picture of a dental implant">
           <div>
             <h3>Dental implants - what's new on the market?</h3>
@@ -53,7 +46,7 @@
       </div>
 
       <div class="news">
-        <a href="article3.html"> <!--Add anchor to separate article page-->
+        <a href="article3.html"> 
           <img src="photos/invisalign.jpg" alt="Picture of girl putting on invisalign braces">
           <div>
             <h3>Pros and cons of Invisalign braces</h3>
@@ -64,7 +57,7 @@
       </div>
 
       <div class="news">
-        <a href="article4.html"> <!--Add anchor to separate article page-->
+        <a href="article4.html"> 
           <img src="photos/child.jpg" alt="Picture of a young child holding a toothbrush">
           <div>
             <h3>New guidelines in pediatric dentistry from January 2021</h3>
@@ -74,7 +67,7 @@
       </div>
 
       <div class="news">
-        <a href="article5.html"> <!--Add anchor to separate article page-->
+        <a href="article5.html"> 
           <img src="photos/dentalclinic.jpg" alt="Picture of a dental clinic">
           <div>
             <h3>COVID-19 - one year later</h3>
@@ -84,7 +77,7 @@
       </div>
 
       <div class="news">
-        <a href="article6.html"> <!--Add anchor to separate article page-->
+        <a href="article6.html"> 
           <img src="photos/electricscooter.jpg" alt="Picture of an electric scooter">
           <div>
             <h3>Dental traumas</h3>
@@ -95,7 +88,7 @@
       </div>
 
       <div class="news">
-        <a href="article7.html"> <!--Add anchor to separate article page-->
+        <a href="article7.html"> 
           <img src="photos/humble.jpg" alt="Picture of toothbrushed from Humble Co">
           <div>
             <h3>Humble Co</h3>
@@ -106,7 +99,7 @@
       </div>
 
       <div class="news">
-        <a href="article8.html"> <!--Add anchor to separate article page-->
+        <a href="article8.html">
           <img src="photos/electrictoothbrush2.jpg" alt="Picture of electric toothbrushes">
           <div>
             <h3>Top 10 best electric toothbrushes in 2021</h3>
@@ -114,9 +107,8 @@
           </div>
         </a>
       </div>
-    <!-- </section> -->
     </section>
-    
+
     <footer>
       <p>Dentnews AB 2021 &copy</p>
     </footer>
