changed small-news from flexbox to grid

--- a/code/index.html
+++ b/code/index.html
@@ -39,7 +39,7 @@
       </article>
     </div>
   </section>
-
+  <div class="border"></div>
   <section class="small-news">
     <div>
       <img src="tea1.jpg" alt="">
