--- a/code/signup.html
+++ b/code/signup.html
@@ -29,6 +29,19 @@
   </div>
   </nav>
 
+  <section class="signup">
+      <form class="signup-form">
+        <h2>SIGN UP!</h2><h3> Get acess to our news letter.</h3><br><br><br>
+        <label for="first_name">First name:</label><br>
+        <input type="text" id="first_name" name="first_name"><br>
+        <label for="last_name">Last name:</label><br>
+        <input type="text" id="last_name" name="last_name"><br>
+        <label for="email">E-mail:</label><br>
+        <input type="email" id="email" name="email"><br><br>
+        <input type="submit" value="Submit">
+      </form>
+  </section>
+
   <footer class="footer">
     <div class="footer-wrapper">
       <p>&copy; Pauline Andersson 2021</p>
