Gave nav bar a new class and changed layout using flexbox instead. Adjusted footer margin since it had the wrong unit.

--- a/code/index.html
+++ b/code/index.html
@@ -16,7 +16,7 @@
         </a>
       </div>
       <img src="photos/dentnews.png" alt="Dentnews logo">
-      <nav>
+      <nav class="navigation-container">
         <a href="article1.html">BREAKING NEWS</a> 
         <a href="about.html">ABOUT US</a> 
         <a href="contact.html">CONTACT</a> 
