Created the basic layout with Flexbox

--- a/code/index.html
+++ b/code/index.html
@@ -4,20 +4,46 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
+    <header class="header">
+      <div class="hamburger">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <h1 class="top-heading">Tech News</h1>
+      <img class="logo" src="./logo.svg" alt="Technigo logo">
+      <nav class="navigation-container">
+        <a class="navigation-item" href="#">NEWS</a>
+        <a class="navigation-item" href="#">TECH</a>
+        <a class="navigation-item" href="#">ABOUT</a>
+      </nav>
     </header>
 
     <section class="big-news">
-      <!-- The big news content -->
-      <!--Test Test-->
+      <div class="news-card-big"></div>
+
+        <!-- <img src="/top_new.jpg">
+        <h2>10 promising pet startups that are keeping pets and pet lovers happy during the pandemic</h2> -->
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <h2>Top news</h2>
+    <section class="other-news">
+      <div class="news-card"></div>
+      <div class="news-card"></div>
+      <div class="news-card"></div>
+      <div class="news-card"></div>
+    </section>
+
+      <h2>Latest</h2>
+      <section class="other-news">
+        <div class="news-card"></div>
+        <div class="news-card"></div>
+        <div class="news-card"></div>
+        <div class="news-card"></div>  
+
     </section>
   </body>
 </html>
