style desktop device

--- a/code/index.html
+++ b/code/index.html
@@ -27,7 +27,7 @@
       <div class="big-news-text">
         <h1>En rubrik i stora bokstäver</h1>
         <p>Hlacus sagittis, lobortis in at non, tempor. Orci eu, proin dui nibh et.
-          Facilisi ut in ullamcorper vivamus convallis mauris in viverra phasellus.
+          Facilisi ut ingit ullamcorper vivamus convallis mauris in viverra phasellus.
           Sed sagittis, ut quis ullamcorper morbi gravida consequat vitae. Diam,
           turpis non pretium sit eget adipiscing diam enim, ornare. Urna, ac neque
           amet consequat sed vitae a. Tellus amet nulla in id ultricies orci, ultrices
